# TyPorch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  test.cpp
cmake/: UpdateSubmodules.cmake
linalg/: CMakeLists.txt  README.md  linalg.h  matrix.cpp  matrix.h  matrixLEGACY.cpp  matrixMP.cpp  tensor.cpp  tensor.h  tensorMP.cpp
linalg/test/: CMakeLists.txt  test.cpp
neural/: CMakeLists.txt  activation.cpp  activation.h  functions.cpp  layers.cpp  layers.h  models.cpp  neural.h
neural/MNIST/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  prepare_mnist.py  requirements.txt  test_mnist.cpp  train_mnist.cpp  train_mnist_pytorch.py
neural/MNIST/data/: mnist_9vs0_test.csv  mnist_9vs0_train.csv  mnist_binary_test.csv  mnist_binary_train.csv
neural/test/: CMakeLists.txt  test.cpp
test/: test.cpp
